add filters and zoom

--- a/magnify/style.css
+++ b/magnify/style.css
@@ -18,8 +18,6 @@ body {
   height: 300px;
   border-radius: 50%;
   overflow: hidden;
-  cursor: none;
-  filter: saturate(100%);
 }
 
 .big-vid-wrapper > img {
@@ -35,7 +33,11 @@ video {
 }
 
 .main-vid {
+  width: var(--main-width);
+}
 
+.big-vid {
+  width: var(--big-width);
 }
 
 select{
@@ -51,3 +53,63 @@ select{
   width: 800px;
   height: 450px;
 }
+
+
+/** Radio buttons **/
+
+.radio-filter-wrapper, .radio-zoom-wrapper {
+  color: #eee;
+  padding: 10px;
+  margin-top: 20px;
+}
+
+.form-radio
+{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  display: inline-block;
+  position: relative;
+  background-color: #f1f1f1;
+  color: #666;
+  top: 10px;
+  height: 30px;
+  width: 30px;
+  border: 0;
+  border-radius: 50px;
+  cursor: pointer;
+  margin-right: 7px;
+  outline: none;
+}
+.form-radio:checked::before
+{
+  position: absolute;
+  font: 13px/1 'Open Sans', sans-serif;
+  left: 11px;
+  top: 7px;
+  content: '\02143';
+  transform: rotate(40deg);
+}
+.form-radio:hover
+{
+  background-color: #f7f7f7;
+}
+.form-radio:checked
+{
+  background-color: #f1f1f1;
+}
+label
+{
+  font: 300 16px/1.7 'Open Sans', sans-serif;
+  color: #eee;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+
+
+
+
+
+
+
